fixed logo class to work on iphone SE

--- a/style.css
+++ b/style.css
@@ -59,7 +59,9 @@ header {
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  margin: 14px 0 14px 20px;
+  padding-top: 0;
+  font-size: 42px;
   color: #fff;
 }
 
@@ -137,7 +139,7 @@ footer p {
 
 /* -------  Media Query ------- */
 
-@media all and (min-width: 800px) {
+@media all and (min-width: 480px) {
   header {
     display: flex;
     justify-content: space-between;
@@ -151,6 +153,12 @@ footer p {
 
   header nav {
     margin-top: 8px;
+  }
+
+  .logo {
+    font-family: "Pangolin", cursive;
+    font-size: 72px;
+    color: #fff;
   }
 
   form {
